tdf#170208 docx import: shift table by cell margin, not style margin

This has always been wrong,
but some documents have accidentally 'looked right' at various times,
most recently before 25.8.3
commit a80d7ba9c01c8c5c95bf01960d969b82dc7edffc
Author: Aron Budea on Mon Sep 29 14:59:18 2025 +0930
    tdf#168598 Fix for tdf#148578 should only apply to RTF
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191587

make CppunitTest_sw_ooxmlfieldexport \
    CPPUNIT_TEST_NAME=testTdf158661_blockSDT

Another nice example was nested-floating-table.docx

Change-Id: Ie4e256dc0651ade8d302bf78646b2a5215414bc6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196462
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit a63534ef77c620c06d41be9ad29c283fe636bf7f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196587
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 53e53fa279c11ba28829164ca68a159e614368d3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197121
(cherry picked from commit 587c9ea7239d2c715975294d0b1d94b06550e74e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197133
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>